--- a/css/styles.css
+++ b/css/styles.css
@@ -89,3 +89,22 @@ h2 {
 .places_list {
   padding-top: 0;
 }
+
+.mdl-grid {
+    max-width: 400px;
+}
+.mdl-card__media {
+    margin: 0;
+}
+.mdl-card__media > img {
+    max-width: 100%;
+}
+.mdl-card__actions {
+    display: flex;
+    box-sizing:border-box;
+    align-items: center;
+}
+.mdl-card__actions > .mdl-button--icon {
+    margin-right: 3px;
+    margin-left: 3px;
+}
