Dodana obsługa zdarzeń w menu na stronie z notatkami: - dodana możliwość edycji zaznaczonych markerów, - dodana możliwość usuwania zaznaczonych markerów, - dodana możliwość wyszukiwania lokalizacji po adresie, Dodana opcja podwójnego kliknięcia wywołująca okno modalne z edycją, Dodana obsługa potwierdzeń przy usuwaniu markerów, Dodany komentarz przy niepoprawnym przesuwaniu markerów

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,17 @@ h2 {
         line-height: 30px;
         padding-left: 10px;
       }
+md-fab-speed-dial {
+      position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 10000000;
+}
+
+.menu_action_buttons .md-fab {
+ fill: :#64aadc;
+}
+
+md-bottom-sheet {
+  position: fixed;
+}
