--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ md-sidenav {
 }
 .user-avatar {
   border-radius: 99%;
+
 }
 
 .tb-toolbar-box h3{
@@ -57,6 +58,12 @@ md-sidenav {
     color: #737373;
 }
 
+.docs-logo{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
 .tb-toolbar-bg {
     background: url('../images/ny.jpg') !important;
     background-repeat: no-repeat !important;
@@ -65,13 +72,14 @@ md-sidenav {
     -moz-background-size: cover !important;
     -o-background-size: cover !important;
     background-size: cover !important;
+    height: 360px;
+    min-height: 160px;
+    position: relative;
 }
 
 
- #places md-toolbar{
-    min-height: inherit;
-  }
-      #map {
+ 
+#map {
     position:relative;
     overflow: hidden;
  
@@ -140,10 +148,10 @@ h2 {
         padding-left: 10px;
       }
 md-fab-speed-dial {
-      position: absolute;
+    position: absolute;
     bottom: 10px;
     right: 10px;
-    z-index: 10000000;
+    z-index: 1;
 }
 
 .menu_action_buttons .md-fab {
@@ -155,3 +163,131 @@ md-bottom-sheet {
 }
 
 #notes .mdl-card {min-height: auto !important}
+
+.mark-github {
+  padding-right: 15px;
+}
+
+
+ .gm-style-iw img {
+  width: 100%;
+ }
+
+
+   #full-width-slider {
+  width: 100%;
+  height: 100%;
+  color: #000;
+}
+.royalSlider > .rsContent {
+  visibility:hidden;
+}
+.coloredBlock {
+  padding: 12px;
+  background: rgba(255,0,0,0.6);
+  color: #FFF;
+   width: 200px;
+   left: 20%;
+   top: 5%;
+}
+.infoBlock {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  left: auto;
+  max-width: 25%;
+  padding-bottom: 0;
+  background: #FFF;
+  background: rgba(255, 255, 255, 0.8);
+  overflow: hidden;
+  padding: 20px;
+}
+.infoBlockLeftBlack {
+  color: #FFF;
+  background: #000;
+  background: rgba(0,0,0,0.75);
+  left: 30px;
+  right: auto;
+}
+.infoBlock h4 {
+  font-size: 20px;
+  line-height: 1.2;
+  margin: 0;
+  padding-bottom: 3px;
+}
+.infoBlock p {
+  font-size: 14px;
+  margin: 4px 0 0;
+}
+.infoBlock a {
+  color: #FFF;
+  text-decoration: underline;
+}
+.photosBy {
+  position: absolute;
+  line-height: 24px;
+  font-size: 12px;
+  background: #FFF;
+  color: #000;
+  padding: 0px 10px;
+  position: absolute;
+  left: 12px;
+  bottom: 12px;
+  top: auto;
+  border-radius: 2px;
+  z-index: 25; 
+} 
+.photosBy a {
+  color: #000;
+}
+.fullWidth {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+@media screen and (min-width:960px) and (min-height:660px) {
+  .heroSlider .rsOverflow,
+  .royalSlider.heroSlider {
+      height: 100% !important;
+  }
+}
+
+@media screen and (min-width:960px) and (min-height:1000px) {
+    .heroSlider .rsOverflow,
+    .royalSlider.heroSlider {
+        height: 100% !important;
+    }
+}
+@media screen and (min-width: 0px) and (max-width: 800px) {
+  .royalSlider.heroSlider,
+  .royalSlider.heroSlider .rsOverflow {
+    height: 100% !important;
+  }
+  .infoBlock {
+    padding: 10px;
+    height: auto;
+    max-height: 100%;
+    min-width: 40%;
+    left: 5px;
+    top: 5px;
+    right: auto;
+    font-size: 12px;
+  }
+  .infoBlock h3 {
+     font-size: 14px;
+     line-height: 17px;
+  }
+}
+.rsContent  
+  img {
+    -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
+    filter: blur(20px);
+}
+ 
+.rsContainer {background: #000;}
+
+/* ---------------------------------------------------------------------------------------- */
+
